AI_proxy/k8s/llm-control-plane-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llm-control-plane
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: ai.tech-sphere.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: llm-control-plane
                port:
                  number: 8000
