AI_proxy/k8s/llm-gate-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llm-gate
  namespace: llm-gate
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: llm-gate.tech-sphere.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: llm-gate
                port:
                  number: 8000
